--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
 <html>
-sms by arsalan
-
-sms by jumaid
-
+    <head>
+        <title>
+            Welcome To Index Page
+        </title>
+        <link rel="stylesheet" href="signin.css">
+    </head>
+    <body>
+        
+        <a href="D:/ArsalanZahoor/SignIn.html">Sign In</a>
+        <p>
+            Please Sign In for Administration Activities 
+        </p>
+    </body>
 </html>
