--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         
-        <a href="D:/ArsalanZahoor/SignIn.html">Sign In</a>
+        <a href="SignIn">Sign In</a> 
         <p>
-            Please Sign In for Administration Activities 
+            Please Click on above link to Sign In for Administration Activities 
         </p>
     </body>
 </html>
