--- a/SignIn.html
+++ b/SignIn.html
@@ -2,13 +2,31 @@
 <html>
     <head>
         <title>Student Sign in Page</title>
-        <script type="text/javascript" src="index.js">
+        <script type="text/javascript">
+            function validate()
+{
+    
+var username=document.getElementById('user_name').value();
+var password=document.getElementById('pass_word').value();
+if(username.length>1 &&  password.length>1)
+    {
+        
+        return true;
+    }
+    else
+        {
+            alert("Username or Password Empty! Please Try Again");
+            return false;
+        }
+        //return
+}
+
         </script>
         <link rel="stylesheet" href="signin.css"/>
     </head>
     <body>
         <h1>WELCOME TO ADMINISTRATION PAGE <br> Please Sign In</h1>
-<? {{=message || ''}} ?>
+
         <form action="/SignIn" method="post" enctype="multipart/form-data">
             User Name:<br>
             <input type="text" id="user_name" name="username">
