Task 2 Connection with MySQL

--- a/SignIn.html
+++ b/SignIn.html
@@ -33,7 +33,7 @@ if(username.length>1 &&  password.length>1)
             <br>
             Password:
             <br>
-            <input type="text" id="pass_word" name="password">
+            <input type="password" id="pass_word" name="password">
             <br><br>
             <input type="submit" id="submit" value="Submit" onsubmit="return validate();">
         </form> 
