Task 2.1 Connection with MySQL Basic Queries

--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,21 @@
                 <br> todays images will be conducted in afternoon by professor
                 <br> P.K Smith.<br>
             </p>
+            <br><br>
+            <h3>Please Insert,Update or Delete Users records from here!</h3>                
+            User Name:<br>
+            <input type="text" id="new_user_name" name="newusername">
+            <br>
+            User Password:
+            <br>
+            <input type="password" id="new_pass_word" name="newpassword">
+            <br><br>
+            <input type="submit" id="insert_user" name="action" value="Insert">
+            &nbsp;
+            <input type="submit" id="update_user" name="action" value="Update">
+            &nbsp;
+            <input type="submit" id="delete_user" name="action" value="Delete">
+            <br>
         </form>
     </body>
 </html>
