--- a/public/pages/home-page.html
+++ b/public/pages/home-page.html
@@ -6,14 +6,14 @@
 <link rel="import" href="/bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="/bower_components/core-menu/core-menu.html">
 <link rel="import" href="/bower_components/core-item/core-item.html">
-<link rel="import" href="/bower_components/baasic-globals/baasic-globals.html">
+<link rel="import" href="/bower_components/baasic-login/baasic-login.html">
 <link rel="import" href="/layouts/sidebar-layout.html">
 
 
 <link rel="stylesheet" href="/pages/signin.css">
 <polymer-element name="home-page" router="{{router}}" attributes="pathArg1 queryParam1">    
     <template>
-        <baasic-globals id="globals"></baasic-globals>
+        <baasic-login id="log"></baasic-login>
         <sidebar-layout selected="home">
 
             <form id="form" action="/Home" method="post" enctype="multipart/form-data">
@@ -142,8 +142,8 @@
                 //                console.log(this.router);
                 //var app = document.querySelector('baasic-login');
                 //console.log("test-home-signout");
-                var globals = this.$.globals;
-                globals.logOut();
+                //var globals = this.$.globals;
+                this.$.log.logOut();
                 //var app = document.querySelector('index-app');
                 //app.$.session=false;
                 //app.init();
