Task 3.1 Polymer, simple-oauth2 and Oauth2-Server with Project(Using Own ajax Element and some fixes)

--- a/public/pages/app-ajax.html
+++ b/public/pages/app-ajax.html
@@ -10,14 +10,13 @@
         Polymer('app-ajax',{
             ready: function(){
               this.access_token = this.access_token || '';
-              this.super()
+              this.super();
             },
             go : function(){
                 if(this.method == 'GET')
                 this.params.access_token = this.access_token;
                 else
                 this.body.access_token = this.access_token;
-      
                 this.body=this.xhr.toQueryString(this.body);
                 this.super();
             }
