--- a/public/pages/baasic-login.html
+++ b/public/pages/baasic-login.html
@@ -83,7 +83,7 @@ The `baasic-login` element provides support for authenticating users and logging
                 <div id="loginbox">
                     <div class="[ loginform ]">
                       <paper-input id="txtUsername" label="Username" value="{{username}}" floatinglabel></paper-input>
-                      <paper-input id="txtPassword" label="Password" type="password" value="{{password}}" floatinglabel></paper-input>
+                      <paper-input id="txtPassword" label="Password" type="Password" value="{{password}}" floatinglabel></paper-input>
                     </div>
                     <paper-button on-click="{{logIn}}">Log in</paper-button> 
                     <template bind if="{{loginInProgress}}">
