Task 4 Major Task Adding Employees form in Project

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -37,7 +37,7 @@
                 <app-route path="/signin" bindRouter import="/pages/signin-page.html"  on-before-data-binding="{{bindSession}}"></app-route>
                 <!--<app-route path="/signin" bindRouter import="/pages/baasic-login.html"  on-before-data-binding="{{bindSession}}"></app-route>-->
                 <app-route path="/home" bindRouter import="/pages/home-page.html" ></app-route>
-                <app-route path="/employee" bindRouter import="/pages/employees-page.html" ></app-route>
+                <app-route path="/employees" bindRouter import="/pages/employees-page.html" ></app-route>
                 <app-route path="/attendance" bindRouter import="/pages/attendance-page.html" ></app-route>
                 <app-route path="/admin" bindRouter import="/pages/admin-page.html" ></app-route>
                 <app-route path="/signout" bindRouter on-activate-route-start="{{logOut}}" ></app-route>
